kafka.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: kafka1
  labels:
    app: kafka1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka1
  template:
    metadata:
      labels:
        app: kafka1
    spec:
      containers:
        - name: kafka1
          image: confluentinc/cp-kafka:5.3.0
---
apiVersion: v1
kind: Service
metadata:
    name: kafka1
spec:
    type: NodePort
    ports:
    - name: kafka1
      port: 9092
      targetPort: 9092
    selector:
        app: kafka1
