zookeeper.yaml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: zookeeper
  labels:
    app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper 
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:latest
          ports:
          - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
    name: zookeeper
spec:
    type: NodePort
    ports:
    - port: 2181
    selector:
        app: zookeeper
