kafka-control-center.yaml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: control-center 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: control-center 
    spec:
      containers:
        - name: control-center
          image: confluentinc/cp-enterprise-control-center:5.3.1
          ports:
          - containerPort: 9021
---
apiVersion: v1
kind: Service
metadata:
    name: control-center
spec:
    type: NodePort
    ports:
    - port: 9021
    selector:
        app: control-center
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: control-center
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: control-center
          servicePort: 9021
        path: /
